# buffer-graphics-lib

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: main.yml
examples/: basic.rs  sample.ici
src/: clipping.rs  color.rs  color_conversion.rs  coord.rs  drawable.rs  drawing.rs  image.rs  image_loading.rs  indexed.rs  indexed_color.rs  lerp.rs  lib.rs  renderable_image.rs  renderable_macros.rs  scaling.rs  text.rs
src/image_loading/: indexed.rs  mod.rs  tilesets.rs
src/integration/: embedded_graphics_lib.rs  mod.rs  noto_sans.rs
src/math/: contains.rs  core.rs  mod.rs
src/shapes/: circle.rs  collection.rs  collection_mutation.rs  convert_shape.rs  line.rs  math.rs  mod.rs  polygon.rs  rect.rs  rendering.rs  triangle.rs
src/shapes/collection/: mod.rs  mutation.rs  shape_box.rs
src/shapes/polyline/: error.rs  mod.rs  rendering.rs
src/text/: format.rs  large.rs  mod.rs  normal.rs  pos.rs  small.rs  wrapping.rs
src/text/font/: limited_3x5.rs  mod.rs  outline_7x9.rs  script_8x8.rs  standard_4x4.rs  standard_4x5.rs  standard_6x7.rs  standard_8x10.rs
